packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanDetail/TextList.css
/*
Copyright (c) 2019 Uber Technologies, Inc.
SPDX-License-Identifier: Apache-2.0
*/

.TextList {
  max-height: 450px;
  overflow: auto;
}

.TextList--List {
  width: 100%;
  list-style: none;
  padding: 0;
  margin: 0;
}

.TextList--List > li:nth-child(2n) {
  background: #f5f5f5;
}

.TextList--List > li {
  padding: 0.25rem 0.5rem;
  vertical-align: top;
}

